force-app/main/default/objects/AI_Tool__c/AI_Tool__c.object-meta.xml
<CustomObject>
    <label>AI Tool</label>
    <pluralLabel>AI Tools</pluralLabel>
    <nameField>
        <label>Tool Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>