force-app/main/default/objects/AI_Tool__c/fields/Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>Permission_Name__c</fullName>
    <label>Permission Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>