force-app/main/default/objects/AI_Tool__c/fields/Required_Arguments__c.field-meta.xml
<CustomField>
    <fullName>Required_Arguments__c</fullName>
    <label>Required Arguments</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>