force-app/main/default/objects/AI_Tool__c/fields/Tool_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Tool_API_Name__c</fullName>
    <label>Tool API Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>