force-app/main/default/objects/AI_Tool__c/fields/Tool_Type__c.field-meta.xml
<CustomField>
    <fullName>Tool_Type__c</fullName>
    <label>Tool Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>